# stellAIverse-contracts

./: CONTRACT_README.md  Cargo.toml  README.md
contracts/agent-nft/: Cargo.toml
contracts/agent-nft/src/: lib.rs
contracts/evolution/: Cargo.toml
contracts/evolution/src/: attestation_tests.rs  evolution_history.rs  lib.rs  test.rs
contracts/execution-hub/: Cargo.toml
contracts/execution-hub/src/: lib.rs
contracts/faucet/: Cargo.toml
contracts/faucet/src/: lib.rs
contracts/marketplace/: Cargo.toml
contracts/marketplace/src/: lib.rs
contracts/oracle/: Cargo.toml
contracts/oracle/src/: lib.rs  tests.rs  testutils.rs
lib/src/: lib.rs
shared/: Cargo.toml
shared/src/: lib.rs
