[package]
name = "oracle"
version.workspace = true
edition.workspace = true

[dependencies]
soroban-sdk = { version = "21.0.0", features = ["alloc"] }
shared = { path = "../../shared", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils", "shared/testutils"]

[lib]
crate-type = ["cdylib"]
